[tool.poetry]
name = "web3-views"
version = "0.1.0"
description = "A library that provides a simple convenience interface for reading data from Smart Contracts."
authors = ["Torran Green <torrangreen@hotmail.co.uk>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
web3 = "^6.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
